--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -10,7 +10,7 @@
     <h1>Bienvenido a la Pagina</h1>
     <ul>
         <li><a href="{% url 'registrarse' %}">Registrarse</a></li>
-        <li><a href=""></a>Logearse</li>
+        <li><a href="{% url 'login' %}">Logearse</a></li>
     </ul>
 {% endblock content %}
     
