--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -11,6 +11,7 @@
     <ul>
         <li><a href="{% url 'registrarse' %}">Registrarse</a></li>
         <li><a href="{% url 'login' %}">Logearse</a></li>
+        <li><a href="{% url 'logout' %}">cerrar sesión</a></li>
     </ul>
 {% endblock content %}
     
