--- a/templates/base.html
+++ b/templates/base.html
@@ -4,16 +4,286 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock title %}</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     
-    {% block css %} {% endblock css %}
+    {% block css_base %}
+    <style>
+        html{font-size: 62.5%;}
+        body {font-size: 1.6rem;margin: 0rem;height: 100%;font-family: Verdana, Geneva, Tahoma, sans-serif;color: black;}
+        h1{margin: auto;margin-top: 1.5rem;}
+        h1, h2{text-align: center;color: black;font-size: 2.6rem;margin-bottom: 3.5rem;}
+        h3{font-size: 1.6rem;font-weight: bolder;text-align: center;margin: 3rem auto;}
+        a{text-decoration: none;}
+        ul{list-style:none;padding-left:0}
+
+        /* nombres de clases generales */
+        .desktop{display: none;}
+
+        /* Header */
+	    .btn-sidebar{color: #fff;font-size: 2.2rem;display: flex;align-self: center;}
+        .link{color: #3776ab;font-weight: 550;}
+        .link::before{content: "☞";font-size: 3.5rem;margin: 0rem .7rem 0rem 1.2rem;}
+        .link span{font-size: 1.6rem;padding: .7rem 1rem;border: .1rem solid #3776ab;border-radius: .5rem;}
+        .descripcion-del-paso{padding: 1rem  2.5rem;margin: 0px;list-style: inside;padding-right: 0rem;}
+        .descripcion-del-paso li{margin-bottom: 1rem;}
+        .descripcion-del-paso ul li::before{content: "*"; margin: 0rem .7rem 0rem 2rem;}
+        .simple-comando{padding: 1.5rem;background-color: #e7e7e7;border-radius: .5rem;margin-left: 2rem;overflow: auto;}
+
+        .top-header {background-color: #a139b0;padding: 0rem;text-align: center;color: #fff;}
+        .top-header h5{margin: 0px;padding: 1rem .5rem;font-size: 1.2rem;}
+        .contenedor-sesiones{display: none;}
+        .header-mobile {padding: 1rem 3rem;background: black;color: #fff;display: flex;justify-content: space-between;}
+        .header-mobile h3{margin: 1.2rem 0rem;color: #fff;}
+        .header-desktop{display: none;}
+        .cursos{display: none}
+        .cursos a{color: #fff;padding: .7rem 1.2rem;border: .1rem solid #fff;border-radius: .7rem;display: flex;justify-items: center;margin: auto 1rem;}
+
+        .sticky {position: fixed;top: 0;width: 90%;transition: 200ms;}
+
+        /* Sidebar */
+        .sidebar{display: none;width: 26rem;background-color: black;position: fixed;height: 100%;overflow: auto;margin: auto;
+                text-align: center;align-content: center;border: 0.1rem solid black!important;color: #ffffffcc!important;}
+        .sidebar a{color: #ffffffcc!important;}
+
+        .contenedor-sidebar-cajaperusa{display: none;position: fixed;z-index: 1;left: 0;top: 0;width: 100%;height: 100%;overflow: auto;box-shadow: 5px 0px 50px rgba(204, 204, 204, 0.11);
+                            background-color: rgba(0,0,0,0.6);border: none!important}
+        .contenedor-sidebar-contenido-cajaperusa{position: relative;background-color: black;border: none!important;width: 25rem;height:100%;margin: 0rem;
+            box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);-webkit-animation-name: animatetop;
+            -webkit-animation-duration: 0.4s;animation-name: animatetop;animation-duration: .7s}
+
+        @-webkit-keyframes animatetop {
+            from {right:0px; opacity:0} 
+            to {top:0; opacity:1}
+        }
+        @keyframes animatetop {
+            from {left:0px; opacity:0}
+            to {top:0; opacity:1}
+        }
+
+        .contenedor-sidebar-contenido-cajaperusa{overflow: scroll;overflow-x: hidden;}
+        .contenedor-sidebar-contenido-cajaperusa::-webkit-scrollbar {-webkit-appearance: none;}
+        .contenedor-sidebar-contenido-cajaperusa::-webkit-scrollbar:vertical {width:.5rem;}
+        .contenedor-sidebar-contenido-cajaperusa::-webkit-scrollbar-button:increment,.contenedor::-webkit-scrollbar-button {display: none;}
+        .contenedor-sidebar-contenido-cajaperusa::-webkit-scrollbar-thumb {background-color: #949da8;border-radius: 2rem;border: 0.1rem solid #949da8;}
+        .contenedor-sidebar-contenido-cajaperusa::-webkit-scrollbar-track {border-radius: 1rem;margin-top: 18rem;margin-bottom: 1.5rem;}
+
+        .btn-close-sidebar{position: absolute;color: black;font-size: 2.5rem;top: 1rem;left: 28rem;background-color: #ffffff9c;border: .1rem solid #ffffff67;border-radius: 50%;width: 3.5rem;height: 3.5rem;}
+        .btn-close-sidebar:hover,
+        .btn-close-sidebar:focus {color: black;text-decoration: none;cursor: pointer;background-color: #dad8d8;}
+
+        .contenedor-serch-principal{background-color: rgba(255, 255, 255, 0.219);border: .1rem solid rgba(255, 255, 255, 0.2);border-radius: 1.5rem;color: #fff;padding: .5rem .7rem;width: 85%;margin: auto;margin-bottom: 2rem;margin-top: 4rem;}
+        .contenedor-serch-principal input[type=search] { background-color: transparent;color: #fff;border: none;padding: .5rem;outline: none;width: calc(100% - 2.5rem)}
+        .contenedor-serch-principal input[type=search]::placeholder { color: #fff;}
+
+        .opciones-navbar{display: flex;flex-direction: column;text-align: left;padding: 2rem .8rem;}
+        .opciones-navbar a{padding: 1rem;color: #ffffffcc;align-self: center;width: calc(100% - 2rem);font-size: 1.5rem;padding-left: 2rem;}
+        .opciones-navbar a:hover{border-radius: .5rem;background-color: rgba(255,255,255,0.2);color: #fff!important;}
+        .cajaperusa{text-align: left;font-size: 1.5rem;margin-bottom: 1rem;border-top: .1rem solid rgba(119, 119, 119, 0.6);padding: .5rem;}
+
+        .accordion-sidebar-admin {cursor: pointer;padding: 1rem;background-color: black;color: #ffffffcc;align-self: center;margin-bottom: .5rem;border:none;border-top: .1rem solid rgba(119, 119, 119, 0.6);
+                                text-align: left;outline: none;font-size: 1.5rem;transition: 0.4s;}
+        .accordion-sidebar-admin:after {content: '\003E';color: #ffffffcc;font-weight: bold;float: right;font-size: 1.8rem;right: 5rem;}
+        .active-sidebar-admin:after {content: "\02C5";color: #fff;}
+        .panel_sidebar_admin {background-color: black;max-height: 0;overflow: hidden;transition: max-height 0.2s ease-out;display: flex;flex-direction: column;}
+        .panel_sidebar_admin a{color: #C2C7D0;align-self: center;font-size: 1.5rem;display: flex;border-radius: .5rem!important;padding-left: 3rem;}
+        .panel_sidebar_admin a:hover{background-color: rgba(255,255,255,0.2);color: #fff!important;}
+        .panel_sidebar_admin a b{font-size: 1.8rem;margin-right: .8rem;}
+        .panel_sidebar_admin a span {font-size: 1.4rem;}
+
+        .sticky {position: fixed;top: 0;width: calc(100% - 6rem);transition: 200ms;}
+        
+        @media only screen and (min-width: 900px) {
+
+            /* nombres de clases generales */
+            .mobile{display: none;}
+            .desktop{display: block;}
+
+            /* Header */
+            .top-header{display: flex;justify-content: space-between;padding: 0rem 3rem;}
+
+            .contenedor-sesiones{display: inline-flex;font-weight: lighter;}
+            .contenedor-sesiones a{font-weight: lighter;}
+            .btn-sesiones{padding: .5rem 1rem;border: .05rem solid rgba(255, 255, 255, 0.6);border-radius: 1.5rem;display: flex;align-self: center;color: #fff;font-weight: bold;margin-left: 1rem;}
+            .social-icons{display: flex;align-self: center;color: #fff;font-weight: bold;margin-left: 1.2rem;}
+            .social-icons i{display: flex;align-self: center;color: #fff;margin-left: 1.2rem;}
+
+            .header-mobile {display: none;}
+            .header-desktop {background: black;color: #fff;display: block;}
+            .header-desktop h3{margin: 1.2rem 0rem;color: #fff;}
+            .contenedor-header{max-width: 120rem;margin: auto;display: flex;justify-content: space-between;padding: 1rem 3rem;}
+
+            .header-left{display: flex;color: #fff;width: 28rem;justify-content: space-between;}
+            .header-left a{color: #fff;}
+            .header-left h3{color: #fff;display: flex;align-self: center;}
+            .opciones-navbar-desktop{display: flex;color: #fff;border: none;}
+            .opciones-navbar-desktop a{border: none;margin: 0rem;display: flex;align-self: center;}
+
+            .header-right{display: flex;width: 47rem;justify-content: space-between;}
+            .header-right span{display: flex;display: flex;align-self: center;margin-left: 1rem;}
+            .contenedor-serch-principal{width: 25rem;margin: .7rem;}
+        }
+        @media only screen and (min-width: 1200px) {
+
+        }
+    </style>
+    {% endblock css_base %}
+        
+
+    {% block css %} 
+    {% endblock css %}
     {% block javascript %}{% endblock javascript %}
         
 </head>
 <body>
+
+
     
-    {% block content %}
+<!-- My header page -->
+{% block header %}
+
+<!-- Header Morado -->
+<div class="top-header">
+    <h5>CAJAPERUSA - VIVE PARA CREAR </h5>
+    <div class="contenedor-sesiones">
+        {% if user.username %}
+        <a class="btn-sesiones" href="{% url 'logout' %}">cerrar sesión</a>
+        {% else %}
+        <a class="btn-sesiones" href="{% url 'registrarse' %}">Registrarse</a>
+        <a class="btn-sesiones" href="{% url 'login' %}">Iniciar Sesión</a>
+        {% endif %}
+        <div class="social-icons"> |
+            <a href="" target="_blank">
+                <i class="fa fa-facebook" aria-hidden="true"></i>
+            </a>
+            <a href="" target="_blank">
+                <i class="fa fa-instagram" aria-hidden="true"></i>
+            </a>
+            <a href="" target="_blank">
+                <i class="fa fa-youtube-play" aria-hidden="true"></i>
+            </a>
+        </div>
+    </div>
+</div>
+
+<!-- Header Negro Mobile -->
+<header class="header-mobile" id="myHeader">
+    <span class="btn-sidebar" id="btn_sidebar"> &#9776;</span>
+    <h3><b>CAJAPERUSA</b></h3>
+    <span class="btn-sidebar fa fa-shopping-cart"></span>
+</header>
+
+<nav class="sidebar contenedor-sidebar-cajaperusa"  id="contenedor_sidebar">
+	<span class="btn-close-sidebar"><b>x</b></span>
+    <div class="contenedor-sidebar-contenido-cajaperusa">
+		<div class="opciones-navbar">
+            <div class="contenedor-serch-principal">
+                <input type="search" placeholder="Buscar.." value="" name="s" autocomplete="off">
+                <i class="fa fa-search" aria-hidden="true"></i>
+            </div>
+			<a href="" class="cajaperusa"> INICIO</a>
+			<a href="" class="cajaperusa"> SOBRE CAPERUSA</a>
+			<a class="accordion-sidebar-admin"> ¿QUÉ HACEMOS?</a>
+				<div class="panel_sidebar_admin">
+					<a href=""><span> Polos Personalizados</span></a>
+					<a href=""><span> Concursos</span></a>
+					<a href=""><span> Curso online</span></a>
+				</div>
+			<a href="" class="cajaperusa"> BLOG</a>
+			<a href="" class="cajaperusa"> TIENDA</a>
+			<a href="" class="cajaperusa"> ACCEDER</a>
+		</div>
+    </div>
+</nav>
+
+<!-- Header Negro Desktop -->
+<header class="header-desktop">
+    <div class="contenedor-header">
+        <div class="header-left">
+            <h3><b>CAJAPERUSA</b></h3>
+            <nav class="opciones-navbar-desktop">
+                <a href="" class="cajaperusa"> INICIO</a>
+                <a href="" class="cajaperusa"> TIENDA</a>
+            </nav>
+        </div>
+        <div class="header-right">
+            <div class="contenedor-serch-principal">
+                <input type="search" placeholder="Buscar.." value="" name="s" autocomplete="off">
+                <i class="fa fa-search" aria-hidden="true"></i>
+            </div>
+            <span>CARRITO | S/0.00</span>
+            <span class="btn-sidebar fa fa-shopping-cart"></span>
+        </div>
+    </div>
+</header>
+
+{% endblock header %}
         
-    {% endblock content %}
+    
+{% block content %}
+<ul>
+    <li><a href="{% url 'registrarse' %}">Registrarse</a></li>
+    <li><a href="{% url 'login' %}">Logearse</a></li>
+    <li><a href="{% url 'logout' %}">cerrar sesión</a></li>
+</ul>
+{% endblock content %}
+
+    
+{% block footer %}
+    
+{% endblock footer %}
+
+
+<script>
+
+// scroll interactive
+window.onscroll = function() {myFunction()};
+
+var header = document.getElementById("myHeader");
+var sticky = header.offsetTop;
+
+function myFunction() {
+  if (window.pageYOffset > sticky) {
+    header.classList.add("sticky");
+  } else {
+    header.classList.remove("sticky");
+  }
+}
+
+// sidebar open and close
+var sidebar = document.getElementById("contenedor_sidebar");
+var btn = document.getElementById("btn_sidebar");
+var span = document.getElementsByClassName("btn-close-sidebar")[0];
+
+btn.onclick = function() {
+    sidebar.style.display = "block";
+}	
+
+span.onclick = function() {
+    sidebar.style.display = "none";
+}
+
+window.onclick = function(event) {
+    if (event.target == sidebar) {
+        sidebar.style.display = "none";
+    }
+}
+
+// Acordion
+var acc = document.getElementsByClassName("accordion-sidebar-admin");
+var i;
+
+for (i = 0; i < acc.length; i++) {
+  acc[i].addEventListener("click", function() {
+    this.classList.toggle("active-sidebar-admin");
+    var panel_sidebar_admin = this.nextElementSibling;
+    if (panel_sidebar_admin.style.maxHeight) {
+      panel_sidebar_admin.style.maxHeight = null;
+    } else {
+      panel_sidebar_admin.style.maxHeight = panel_sidebar_admin.scrollHeight + "px";
+    } 
+  });
+}
+</script>
         
 </body>
 </html>
