--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -4,14 +4,120 @@
 {% block title %}
     Cajaperusa
 {% endblock title %}
+
+
+{% block css %}
+<style>
+h1,h2{color: #fff;}
+/* Banner */
+.banner{width: 100%;max-height: 67rem;object-fit: cover;}
+.contenedor-banner{position: relative;}
+.contenido-banner{position: absolute;color: #fff;top: 25%;left: 3rem;height: 50%;display: flex;flex-direction: column;justify-content: space-between;}
+.title-contenido{width: 80%;font-size: 1.2rem;margin: 0rem;text-align: left;font-weight: bold;margin: 0rem;}
+.desde-banner{background-color: #a139b0;border: .1rem solid #a139b0;border-radius: 1rem;color: #fff;padding: .3rem .7rem;margin: 0rem;width: 11rem;}
+.subtitle-contenido{font-size: 1.2rem;text-align: left;margin: 0rem;}
+@media only screen and (min-width: 500px) {
+    .contenido-banner{height: 30%;top: 35%;}
+    .title-contenido{font-size: 1.6rem;}
+    .desde-banner{font-size: 1.6rem;width: 15rem;}
+    .subtitle-contenido{font-size: 1.6rem;}
+}
+@media only screen and (min-width: 900px) {
+    .contenido-banner{width: 42.5rem;}
+    .title-contenido{font-size: 2.5rem;font-weight: bold;width: 100%;}
+    .contenedor-btn-banner{display: flex;justify-content: space-between;}
+    .desde-banner{font-size: 1.8rem;width: 23rem;border-radius: .5rem;padding:1rem;border-right: 5rem;}
+    .serigrafia-banner{background-color: transparent;border: .2rem solid #fff;color: #fff;font-size: 1.8rem;width: 18rem;border-radius: .5rem;padding: .8rem;}
+
+}
+@media only screen and (min-width: 1200px) {
+    .contenido-banner{left: calc(50% - 60rem);}
+}
+
+</style>
+
+
+{% endblock css %}
     
 
 {% block content %}
-    <h1>Bienvenido a la Pagina</h1>
-    <ul>
-        <li><a href="{% url 'registrarse' %}">Registrarse</a></li>
-        <li><a href="{% url 'login' %}">Logearse</a></li>
-        <li><a href="{% url 'logout' %}">cerrar sesión</a></li>
-    </ul>
+<div class="contenedor-banner">
+    <img src="https://ox.pe/wp-content/uploads/2020/10/Banner-Poleras-Inicio.jpg" alt="" class="banner">
+    <div class="contenido-banner">
+        <h1 class="title-contenido">POLERAS PERSONALIZADAS</h1>
+        <h2 class="subtitle-contenido desktop">SERIGRAFIA DIGITAL</h2>
+        <span class="desktop" >Pide tu polera hoy</span>
+        <div class="contenedor-btn-banner desktop">
+            <button type="submit" class="desde-banner">POLERAS DESDE S/. 89 </button>
+            <button type="submit" class="serigrafia-banner">¿Serigrafía digital? </button>
+        </div>
+        <button type="submit" class="desde-banner mobile">DESDE S/. 89 </button>
+        <h2 class="subtitle-contenido mobile">¿Serigrafía digital?</h2>
+    </div>
+</div>
+    <h3>CREATIVIDAD AL MÁXIMO</h3>
+
+
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 {% endblock content %}
     
