personalizando nuestras sesiones

--- a/templates/base.html
+++ b/templates/base.html
@@ -180,7 +180,7 @@
                 <input type="search" placeholder="Buscar.." value="" name="s" autocomplete="off">
                 <i class="fa fa-search" aria-hidden="true"></i>
             </div>
-			<a href="" class="cajaperusa"> INICIO</a>
+			<a href="{% url 'home' %}" class="cajaperusa"> INICIO</a>
 			<a href="" class="cajaperusa"> SOBRE CAPERUSA</a>
 			<a class="accordion-sidebar-admin"> ¿QUÉ HACEMOS?</a>
 				<div class="panel_sidebar_admin">
@@ -201,7 +201,7 @@
         <div class="header-left">
             <h3><b>CAJAPERUSA</b></h3>
             <nav class="opciones-navbar-desktop">
-                <a href="" class="cajaperusa"> INICIO</a>
+                <a href="{% url 'home' %}" class="cajaperusa"> INICIO</a>
                 <a href="" class="cajaperusa"> TIENDA</a>
             </nav>
         </div>
