--- a/templates/usuarios/verificacion.html
+++ b/templates/usuarios/verificacion.html
@@ -1,20 +1,40 @@
 {% extends "base.html" %} 
 {% load static %} 
 
-{% block title %}
-    Cambiar Contraseña
-{% endblock title %}
-    
+{% block title %}Cambiar Contraseña{% endblock title %}
+
+{% block css %}
+<style>
+.contendor-sesiones{width: 80%;max-width: 35rem;margin: auto;border: .1rem solid #777;border-radius: 1rem;padding: 1.5rem;margin-top: 2rem;
+            background-color: rgba(119, 119, 119, 0.03);box-shadow: 0 4px 8px 0 rgba(0,0,0,0.1);}
+.contendor-sesiones form p{display: flex;flex-direction: column;}
+form input[type="text"], form input[type="password"], form input[type="email"]{border: .1rem solid #777; border-radius: .5rem;padding: 1rem 1.2rem;margin-top: 1rem;}
+form button{background-color: #a139b0;color: #fff;border: .1rem solid #a139b0;border-radius: .7rem;padding: 1rem 1.2rem;font-size: 1.5rem;margin-top: 3rem;margin-bottom: 2rem;}
+form{text-align: center;}
+form label{text-align: left;}
+@media only screen and (min-width: 900px) {
+    .contendor-sesiones{padding: 2rem;}
+    form input[type="text"], form input[type="password"]{font-size: 1.6rem;}
+    form button{font-size: 1.8rem;margin-bottom: 0rem;}
+    form label{text-align: left;font-size: 1.8rem;}
+}
+</style>
+{% endblock css %}      
 
 {% block content %}
-    
-    <h1>Vereficador de Email </h1>
+
+<div class="contendor-sesiones">
+    <h1>Verificador de Email:</h1>
     <h3>Ingrese el codigo de Verificación</h3>
     <form action="" method="post">
         {% csrf_token %}
-        {{form.as_p}}
+        <p>
+            <label for="id_codregistro">Código de registro:</label> 
+            <input type="text" name="codregistro" required="" id="id_codregistro">
+        </p>
         <button type="submit">Confirmar</button>
     </form>
+</div> 
 
 {% endblock content %}
     
