--- a/templates/base.html
+++ b/templates/base.html
@@ -67,7 +67,7 @@
         .contenedor-sidebar-contenido-cajaperusa::-webkit-scrollbar-thumb {background-color: #949da8;border-radius: 2rem;border: 0.1rem solid #949da8;}
         .contenedor-sidebar-contenido-cajaperusa::-webkit-scrollbar-track {border-radius: 1rem;margin-top: 18rem;margin-bottom: 1.5rem;}
 
-        .btn-close-sidebar{position: absolute;color: black;font-size: 2.5rem;top: 1rem;left: 28rem;background-color: #ffffff9c;border: .1rem solid #ffffff67;border-radius: 50%;width: 3.5rem;height: 3.5rem;}
+        .btn-close-sidebar{position: absolute;color: black;font-size: 2.5rem;top: 1rem;right: 2rem;background-color: #ffffff9c;border: .1rem solid #ffffff67;border-radius: 50%;width: 3.5rem;height: 3.5rem;}
         .btn-close-sidebar:hover,
         .btn-close-sidebar:focus {color: black;text-decoration: none;cursor: pointer;background-color: #dad8d8;}
 
@@ -90,7 +90,23 @@
         .panel_sidebar_admin a b{font-size: 1.8rem;margin-right: .8rem;}
         .panel_sidebar_admin a span {font-size: 1.4rem;}
 
+        /* transition when scroll */
         .sticky {position: fixed;top: 0;width: calc(100% - 6rem);transition: 200ms;}
+
+        /* footer */
+        .escribenos-wsp{position:fixed;color:#07bc4c;z-index:100;bottom:82px;right:25px;text-align:center;font-family:gilroy-Medium;font-size:14px}
+        .whatsapp{position:fixed;width:60px;height:60px;bottom:20px;right:30px;background-color:#07bc4c;color:#FFF!important;border-radius:50px;text-align:center;font-size:30px;z-index:100}
+        .whatsapp-icon{margin-top:13px}
+
+        footer{background-color: black;}
+        .contenedor-top-footer{color: #fff;display: flex;flex-wrap: wrap;max-width: 120rem;margin: auto;padding: 1rem;justify-content: space-between;}
+        .contenido-top-footer{width: calc(100% - 2rem);height: 32rem;margin: auto;}
+        .title-top-footer{text-align: center;}
+        
+        .contenedor-bottom-footer{background-color: #a139b0;display: flex;flex-wrap: wrap;justify-content: space-between;padding: 1rem;color: #fff;font-size: 1.2rem;justify-items: center;}
+        .copyright{margin-top: .5rem;}
+        .contenedor-about-us{width: 100%; display: flex;justify-content: space-between;max-width: 28rem;margin-top: .5rem;}
+
         
         @media only screen and (min-width: 900px) {
 
@@ -121,6 +137,12 @@
             .header-right{display: flex;width: 47rem;justify-content: space-between;}
             .header-right span{display: flex;display: flex;align-self: center;margin-left: 1rem;}
             .contenedor-serch-principal{width: 25rem;margin: .7rem;}
+
+            /* footer */
+            .contenido-top-footer{width: 33%;height: 32rem;}
+
+            .contenedor-bottom-footer{padding: 1rem 2rem;}
+            
         }
         @media only screen and (min-width: 1200px) {
 
@@ -219,17 +241,40 @@
 {% endblock header %}
         
     
-{% block content %}
-<ul>
-    <li><a href="{% url 'registrarse' %}">Registrarse</a></li>
-    <li><a href="{% url 'login' %}">Logearse</a></li>
-    <li><a href="{% url 'logout' %}">cerrar sesión</a></li>
-</ul>
-{% endblock content %}
+
+{% block content %}{% endblock content %}
+
 
     
 {% block footer %}
+
+<div class="escribenos-wsp"> ¡Escribenos!</div>
+<a href="https://wa.me/51931853259?text=Hola%20me%20gustaría%20saber:" class="whatsapp" target="_blank"> <i class="fa fa-whatsapp whatsapp-icon"></i></a>
     
+<footer>
+    <div class="contenedor-top-footer">
+        <div class="contenido-top-footer">
+            <div class="title-top-footer">COMUNIDAD</div>
+        </div>
+        <div class="contenido-top-footer">
+            <div class="title-top-footer">POLO PERSONALIZADO</div>
+
+        </div>
+        <div class="contenido-top-footer">
+            <div class="title-top-footer">CONTACTO CAPERUSA</div>
+
+        </div>
+    </div>
+    <div class="contenedor-bottom-footer">
+        <span class="copyright">Copyright © Cajaperusa 2020 - Todos los derechos reservados</span> 
+        <div class="contenedor-about-us">
+            <div>Sobre Cajaperusa</div>
+            <div>Términos y condiciones</div>
+        </div>
+
+    </div>
+</footer>
+
 {% endblock footer %}
 
 
