mejorando el footer

--- a/templates/base.html
+++ b/templates/base.html
@@ -107,11 +107,11 @@
         .contenedor-img-footer{text-align: center;padding: 1.5rem;}
         .nustra-comunidad-footer{text-align: center;padding: 1rem;}
         .topico-comunidad-footer{margin: 1.5rem .5rem;}
-        .contacto-topicos-footer{padding: 0rem 2rem;}
+        .contacto-topicos-footer{padding: 0rem 4.5rem;}
         
         .contenedor-bottom-footer{background-color: #a139b0;display: flex;flex-wrap: wrap;justify-content: space-between;padding: 1rem;color: #fff;font-size: 1.2rem;justify-items: center;}
         .copyright{margin-top: .5rem;}
-        .contenedor-about-us{width: 100%; display: flex;justify-content: space-around;max-width: 28rem;margin-top: .5rem;}
+        .contenedor-about-us{width: 100%; display: flex;justify-content: space-between;max-width: 28rem;margin-top: .5rem;}
 
         
         @media only screen and (min-width: 900px) {
@@ -146,9 +146,10 @@
 
             /* footer */
             .contenedor-top-footer{padding: 3rem 1rem;}
-            .contenido-top-footer{width: 33%;height: 32rem;}
+            .contenido-top-footer{width: 33%;height: 32rem;margin-bottom: 2rem;}
 
             .contenedor-bottom-footer{padding: 1rem 2rem;justify-content: space-around;}
+            .contenedor-about-us{justify-content: space-around;}
             
         }
         @media only screen and (min-width: 1200px) {
@@ -269,20 +270,22 @@
                 <div class="topico-comunidad-footer">Concursos</div>
                 <div class="topico-comunidad-footer">Curso Online</div>
             </div>
-            <hr class="mobile">
+            <hr class="mobile" style="border-top: 0rem;">
         </div>
+        <hr class="desktop" style="width: .1rem;border-width: 0rem; background-color: #ffffff66">
         <div class="contenido-top-footer">
             <div class="title-top-footer">POLO PERSONALIZADO</div>
             <div class="contenedor-img-footer">
                 <img src="https://ox.pe/wp-content/uploads/2020/07/Polo-personalizado-Negro-240-x-270.jpg" alt="">
             </div>
-            <hr class="mobile">
+            <hr class="mobile" style="border-top: 0rem;">
         </div>
+        <hr class="desktop" style="width: .1rem;border-width: 0rem; background-color: #ffffff66">
         <div class="contenido-top-footer">
             <div class="title-top-footer">CONTACTO CAPERUSA</div>
             <div class="contenedor-contacto-footer">
                 <div class="contacto-topicos-footer">
-                    <div class="topico-contacto"><b>Dirección: </b>San Martín 215 Barranco </div>
+                    <div class="topico-contacto"><b>Dirección: </b>San Martín 215 Barranco. </div>
                     <div class="topico-contacto"><b>Celular: </b>931-853-259</div>
                     <div class="topico-contacto"><b>Horario: </b>Lun-Vie: 10:00 a 18:00</div>
                 </div>
