--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -22,7 +22,7 @@ h1,h2{color: #fff;}
         -ms-overflow-style: -ms-autohiding-scrollbar;position: relative;}
 .contenedor-nuestros-productos::-webkit-scrollbar {display:none;}
 .contenedor-images-nuestros-productos{display: flex;width: 300%;justify-content: space-around;}
-.image-nuestro-producto{width: 94%;object-fit: cover;margin: 3%;}
+.image-nuestro-producto{width: 94%;object-fit: cover;margin: 0rem 3%;}
 
 .contenedor-image-producto{position: relative;}
 .descripcion-img-nuestro-producto{position: absolute;top: 60%;left: 3%;width: calc(94% - 2rem);background-color: rgba(255, 255, 255, 0.9);padding: 1rem;text-align: center;}
@@ -51,6 +51,8 @@ h1,h2{color: #fff;}
     /* Imagenes */
     .contenedor-images-nuestros-productos{width: 100%;}
     .contenedor-image-producto{width: 100%;object-fit: contain;}
+
+    #prev_mis_services_recomed_prod_detail, #next_mis_services_recomed_prod_detail {display: none;}
 }
 @media only screen and (min-width: 900px) {
     .contenido-banner{width: 42.5rem;}
