--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -76,6 +76,8 @@ h1,h2{color: #fff;}
     
 
 {% block content %}
+<main>
+    
 <div class="contenedor-banner">
     <img src="https://ox.pe/wp-content/uploads/2020/10/Banner-Poleras-Inicio.jpg" alt="" class="banner">
     <div class="contenido-banner">
@@ -145,5 +147,7 @@ nserv.onclick = function(){
     }
 }
 </script>
+    
+</main>
 {% endblock content %}
     
