historial de pagos 3.0

--- a/templates/producto/historial_pagos.html
+++ b/templates/producto/historial_pagos.html
@@ -73,7 +73,7 @@
     }
     
     .btn {
-      background-color: #4CAF50;
+      background-color: #a139b0;
       color: white;
       padding: 12px;
       margin: 10px 0;
@@ -85,7 +85,7 @@
     }
     
     .btn:hover {
-      background-color: #45a049;
+      background-color: #a139b0;
     }
     
     a {
@@ -113,7 +113,7 @@
     </style>
     </head>
     <body>
-    
+    <br>
     <div class="row">
       <div class="col-75">
         <div class="container">
