--- a/templates/producto/historial_pagos.html
+++ b/templates/producto/historial_pagos.html
@@ -180,13 +180,13 @@
       </div>
       <div class="col-25">
         <div class="container">
-          <h4>Cart <span class="price" style="color:black"><i class="fa fa-shopping-cart"></i> <b>4</b></span></h4>
-          <p><a href="#">Product 1</a> <span class="price">$15</span></p>
-          <p><a href="#">Product 2</a> <span class="price">$5</span></p>
-          <p><a href="#">Product 3</a> <span class="price">$8</span></p>
-          <p><a href="#">Product 4</a> <span class="price">$2</span></p>
+          <h4>Cart <span class="price" style="color:black"><i class="fa fa-shopping-cart"></i> <b>{{cantidad_solicitud}}</b></span></h4>
+          
+          {% for s in solicitudes %}
+            <p><a href="#">{{s.created_at}}</a> <span class="price">S/ 85</span></p>
+          {% endfor %}
           <hr>
-          <p>Total <span class="price" style="color:black"><b>$30</b></span></p>
+          <p>Total <span class="price" style="color:black"><b>S/ {{user.monto_pagar}}</b></span></p>
         </div>
       </div>
     </div>
