--- a/templates/producto/solicitar_cita.html
+++ b/templates/producto/solicitar_cita.html
@@ -10,7 +10,7 @@
 <!-- XDSoft DateTimePicker -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.min.css" integrity="sha256-DOS9W6NR+NFe1fUhEE0PGKY/fubbUCnOfTje2JMDw3Y=" crossorigin="anonymous" />
 <style>
-.contendor-sesiones{width: 80%;max-width: 38rem;margin: auto;border: .1rem solid #777;border-radius: 1rem;padding: 1.5rem;margin-top: 2rem;
+.contendor-sesiones{width: 80%;max-width: 40rem;margin: auto;border: .1rem solid #777;border-radius: 1rem;padding: 1.5rem;margin-top: 2rem;
             background-color: rgba(119, 119, 119, 0.03);box-shadow: 0 4px 8px 0 rgba(0,0,0,0.1);overflow: hidden;}
 .contendor-sesiones form p{display: flex;flex-direction: column;}
 form input[type="text"], form textarea, form select{border: .1rem solid #777; border-radius: .5rem;padding: 1rem 1.2rem;margin-top: 1rem;}
@@ -60,7 +60,7 @@ form label{text-align: left;}
     
         <p><label for="id_descripcion_complementaria">Descripcion complementaria:</label> </p>
             <!-- <div class="django-ckeditor-widget" data-field-id="id_descripcion_complementaria" style="display: inline-block;"> -->
-            <textarea cols="40" id="id_descripcion_complementaria" name="descripcion_complementaria" rows="10" data-processed="0" data-config="{&quot;skin&quot;: &quot;moono-lisa&quot;, &quot;toolbar_Basic&quot;: [[&quot;Source&quot;, &quot;-&quot;, &quot;Bold&quot;, &quot;Italic&quot;]], &quot;toolbar_Full&quot;: [[&quot;Styles&quot;, &quot;Format&quot;, &quot;Bold&quot;, &quot;Italic&quot;, &quot;Underline&quot;, &quot;Strike&quot;, &quot;SpellChecker&quot;, &quot;Undo&quot;, &quot;Redo&quot;], [&quot;Link&quot;, &quot;Unlink&quot;, &quot;Anchor&quot;], [&quot;Image&quot;, &quot;Flash&quot;, &quot;Table&quot;, &quot;HorizontalRule&quot;], [&quot;TextColor&quot;, &quot;BGColor&quot;], [&quot;Smiley&quot;, &quot;SpecialChar&quot;], [&quot;Source&quot;]], &quot;toolbar&quot;: &quot;Full&quot;, &quot;height&quot;: 291, &quot;width&quot;: 835, &quot;filebrowserWindowWidth&quot;: 940, &quot;filebrowserWindowHeight&quot;: 725, &quot;language&quot;: &quot;en-PE&quot;}" data-external-plugin-resources="[]" data-id="id_descripcion_complementaria" data-type="ckeditortype"></textarea>
+            <textarea style="resize: vertical; height: 20rem;width: calc(100% - 3rem)" id="id_descripcion_complementaria" name="descripcion_complementaria" data-processed="0" data-config="{&quot;skin&quot;: &quot;moono-lisa&quot;, &quot;toolbar_Basic&quot;: [[&quot;Source&quot;, &quot;-&quot;, &quot;Bold&quot;, &quot;Italic&quot;]], &quot;toolbar_Full&quot;: [[&quot;Styles&quot;, &quot;Format&quot;, &quot;Bold&quot;, &quot;Italic&quot;, &quot;Underline&quot;, &quot;Strike&quot;, &quot;SpellChecker&quot;, &quot;Undo&quot;, &quot;Redo&quot;], [&quot;Link&quot;, &quot;Unlink&quot;, &quot;Anchor&quot;], [&quot;Image&quot;, &quot;Flash&quot;, &quot;Table&quot;, &quot;HorizontalRule&quot;], [&quot;TextColor&quot;, &quot;BGColor&quot;], [&quot;Smiley&quot;, &quot;SpecialChar&quot;], [&quot;Source&quot;]], &quot;toolbar&quot;: &quot;Full&quot;, &quot;height&quot;: 291, &quot;width&quot;: 835, &quot;filebrowserWindowWidth&quot;: 940, &quot;filebrowserWindowHeight&quot;: 725, &quot;language&quot;: &quot;en-PE&quot;}" data-external-plugin-resources="[]" data-id="id_descripcion_complementaria" data-type="ckeditortype"></textarea>
             <!-- </div><p></p> -->
             <p></p>
         <button type="submit">Solicitar</button>
